Members-survey page created and linked to after new profile is created

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,8 @@ shared: &shared
   encoding: unicode
   pool: 5
   host: localhost
+  username: jeff
+  password: edinburgh
   
 development:
   <<: *shared
