attempted second precompile

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -243,16 +243,22 @@ pages/impacteqn.jpg: pages/impacteqn-8c97f3c2f62c7dddf0ef746428679a1e.jpg
 pages/impacteqn/index.jpg: pages/impacteqn-8c97f3c2f62c7dddf0ef746428679a1e.jpg
 press/bbc.jpeg: press/bbc-f2ea34e5093bfc5940edecc8e02dc6d4.jpeg
 press/bbc/index.jpeg: press/bbc-f2ea34e5093bfc5940edecc8e02dc6d4.jpeg
+press/bbc.png: press/bbc-50d0a0096ad62f3ab9a2330d1581819e.png
+press/bbc/index.png: press/bbc-50d0a0096ad62f3ab9a2330d1581819e.png
 press/bbc_news.png: press/bbc_news-5dee21c9d545831437ea99c919dacadc.png
 press/bbc_news/index.png: press/bbc_news-5dee21c9d545831437ea99c919dacadc.png
 press/eighty_thousand_hours_logo_bw.png: press/eighty_thousand_hours_logo_bw-e7fbd06a002fef610ca456c63cf33dbb.png
 press/eighty_thousand_hours_logo_bw/index.png: press/eighty_thousand_hours_logo_bw-e7fbd06a002fef610ca456c63cf33dbb.png
 press/eighty_thousand_hours_logo_color.png: press/eighty_thousand_hours_logo_color-45ad79c8a3618afae37b4f4e64c9c2a6.png
 press/eighty_thousand_hours_logo_color/index.png: press/eighty_thousand_hours_logo_color-45ad79c8a3618afae37b4f4e64c9c2a6.png
+press/npr.png: press/npr-cd0e75cd9461d76f0a0c969665191ca6.png
+press/npr/index.png: press/npr-cd0e75cd9461d76f0a0c969665191ca6.png
 press/ted_logo.gif: press/ted_logo-97d5f8901ab8439ef8c39ce898de8e96.gif
 press/ted_logo/index.gif: press/ted_logo-97d5f8901ab8439ef8c39ce898de8e96.gif
-press/washpo.png: press/washpo-c4c8f2b6c9b067c70c8e50b081d66760.png
-press/washpo/index.png: press/washpo-c4c8f2b6c9b067c70c8e50b081d66760.png
+press/ted_logo.png: press/ted_logo-6139f8b71e5a1f057f47cfa3885de208.png
+press/ted_logo/index.png: press/ted_logo-6139f8b71e5a1f057f47cfa3885de208.png
+press/washpo.png: press/washpo-04dde304e77bc88fd6c261f9738a97bb.png
+press/washpo/index.png: press/washpo-04dde304e77bc88fd6c261f9738a97bb.png
 profiles/avatar_default_200x200.png: profiles/avatar_default_200x200-df17869a69493bc9062881949c9464c8.png
 profiles/avatar_default_200x200/index.png: profiles/avatar_default_200x200-df17869a69493bc9062881949c9464c8.png
 profiles/avatar_default_48x48.png: profiles/avatar_default_48x48-ca9eb287a12546a6df9375ed7ec19f14.png
@@ -283,8 +289,8 @@ all-members-page.js: all-members-page-d70c61d82265f7bffa9f90781b9e5308.js
 all-members-page/index.js: all-members-page-d70c61d82265f7bffa9f90781b9e5308.js
 application-form.js: application-form-6eaef27653f93158ca9d8f45bae81e08.js
 application-form/index.js: application-form-6eaef27653f93158ca9d8f45bae81e08.js
-application.js: application-38ada52611d2516db98c9104d680ed58.js
-application/index.js: application-38ada52611d2516db98c9104d680ed58.js
+application.js: application-9849d0945517f8ba2e2749449f188e40.js
+application/index.js: application-9849d0945517f8ba2e2749449f188e40.js
 comments.js: comments-a013697181f667677da3ba0844d09b1e.js
 comments/index.js: comments-a013697181f667677da3ba0844d09b1e.js
 donation-calculator.js: donation-calculator-a243a7c8c478ffa1ef223aa28ea30fd1.js
@@ -301,8 +307,6 @@ jquery.pageless.js: jquery.pageless-d7ad22615df065f1916957a161c94e5e.js
 jquery/index.pageless.js: jquery.pageless-d7ad22615df065f1916957a161c94e5e.js
 linkedin-form.js: linkedin-form-07e02c5e72c85abd3cf12579cd6860a9.js
 linkedin-form/index.js: linkedin-form-07e02c5e72c85abd3cf12579cd6860a9.js
-meet-the-team.js: meet-the-team-004272c9696d10bbaedd696a8cd83564.js
-meet-the-team/index.js: meet-the-team-004272c9696d10bbaedd696a8cd83564.js
 members-page.js: members-page-3c06d1e8c60c05a33020f24510f74bf3.js
 members-page/index.js: members-page-3c06d1e8c60c05a33020f24510f74bf3.js
 misc.js: misc-f313af20dc362e8e5e344cbe6af46e5a.js
@@ -317,8 +321,8 @@ view-profile.js: view-profile-26a73eacc2cd04e41b91b2ca8b7fb726.js
 view-profile/index.js: view-profile-26a73eacc2cd04e41b91b2ca8b7fb726.js
 active_admin.css: active_admin-76383aff427bafb7478ca6a48dd7a555.css
 active_admin/index.css: active_admin-76383aff427bafb7478ca6a48dd7a555.css
-application.css: application-f31075a69cc23d6f1907c01b2805bcf7.css
-application/index.css: application-f31075a69cc23d6f1907c01b2805bcf7.css
+application.css: application-700c2c3194153ff077c0c89458bb4a61.css
+application/index.css: application-700c2c3194153ff077c0c89458bb4a61.css
 triangle.ai: triangle-14eee0a7f5327df20652572e1d92ab93.ai
 triangle/index.ai: triangle-14eee0a7f5327df20652572e1d92ab93.ai
 video_image.psd: video_image-e0e144a094e26fa52f3a206b2458c707.psd
