--- a/config/s3.yml
+++ b/config/s3.yml
@@ -2,8 +2,10 @@ development:
   access_key_id: ENV['S3_ACCESS']
   secret_access_key: ENV['S3_SECRET']
   bucket: ENV['S3_BUCKET']
+  s3_host_name: 's3-eu-west-1.amazonaws.com'
 
 production:
   access_key_id: ENV['S3_ACCESS']
   secret_access_key: ENV['S3_SECRET']
   bucket: ENV['S3_BUCKET']
+  s3_host_name: 's3-eu-west-1.amazonaws.com'
